Navigation bar - Responsive - With Gsap animations - Fulscreen on all device sizes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,29 @@
-/* You can add global styles to this file, and also import other style files */
+// Font
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap');
+
+$font-family-sans-serif: 'Montserrat';
+
+// Colors
+$primary: #FFE86D;
+$secondary: #089239;
+$body-bg: #010D04;
+$body-color: #FFFFFF;
+$text-light: #FFFFFF;
+$dark: #011105;
+$font-weight-bolder: 500;
+$border-radius: 20px;
+$spacer: 2rem;
+
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
+
+*,
+*::after,
+*::before{
+    margin: 0;
+    padding: 0;
+}
+
+h1,h2,h3,h4,h5,h6{
+    margin: 0;
+    padding: 0;
+}
