--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible"
+        content="IE=edge" />
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0" />
   <title>Temo Kuliashvili | Portfolio</title>
 </head>
+
 <body>
   <app-header></app-header>
   <app-home></app-home>
+  <app-about></app-about>
+  <app-work></app-work>
+  <app-contact></app-contact>
   <app-footer></app-footer>
-  <button class="btn btn-primary">hello</button>
-  <div class="vh-100"></div>
 </body>
+
 </html>
