Redesigned about me section - Animated Intro section - Animated About me section on load

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,62 @@
-<div id="about">
-  <div class="container-xxl">
-    <h1>About</h1>
+<div id="about"
+     class="min-vh-100 d-flex align-items-center position-relative my-5"
+     #about>
+
+  <h1 class="display-1 fw-bold text-primary about-me-introduction"
+      #aboutIntroTitle>
+    Hello!
+  </h1>
+
+  <div class="container-xxl position-relative p-2 p-md-0"
+       style="z-index: 10;">
+    <h1 class="display-1 fw-bold mb-4 about-title">About me</h1>
+
+    <div>
+      <div class="about-img">
+        <img src="../../assets/img.jpg"
+             alt="Me">
+      </div>
+
+      <div class="about-me p-2 p-md-0 "
+           style="z-index: 10;">
+        <h1 class="fw-normal display-2 mb-2 text-nowrap"
+            #aboutMeName>I am <b class="text-primary fw-bold">Temo Kuliashvili</b>,
+        </h1>
+        <div class="about-text w-100 w-md-50"
+             #aboutText>
+          <p>
+            a Frontend Developer. I am a self-taught programmer passionate about this work, always looking for new and
+            innovative ideas to bring to a project.
+          </p>
+          <p>
+            My passion motivates me to think creatively and produce the result.</p>
+          <p>
+            I give my all to any project and am always looking ahead to the next task at hand.
+          </p>
+        </div>
+        <!-- <h5 class="display-5">
+          Technical Skills
+        </h5>
+        <ul>
+          <li>Angular</li>
+          <li>TypeScript</li>
+          <li>HTML</li>
+          <li>CSS/SCSS</li>
+          <li>Javascript</li>
+          <li>Bootstrap</li>
+          <li>GSAP</li>
+        </ul>
+        <h5 class="display-5">
+          Design Skills
+        </h5>
+        <ul>
+          <li>Figma</li>
+          <li>Photoshop</li>
+          <li>Adobe XD</li>
+        </ul>
+      </div> -->
+
+      </div>
+
+    </div>
   </div>
-</div>
