--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
 <!-- Intro Section -->
 <div class="intro d-flex min-vh-100 align-items-center"
      id="home">
-  <div class="intro-container container-xxl position-relative">
+  <div class="intro-container container-xxl position-relative"
+       #introContent>
     <h1 class="intro-title display-1 fw-bold">Temo</h1>
     <div class="intro-cta">
       <h1 class="display-1 fw-bold intro-title">Kuliashvili</h1>
