--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
-<nav class="py-1">
+<nav class="py-1"
+     #navContainer>
   <div class="container-xxl position-relative">
     <!-- Logo -->
     <div class="logo">TK</div>
