--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,12 +14,26 @@ $font-weight-bolder: 500;
 $border-radius: 20px;
 $spacer: 2rem;
 
-$display-font-sizes: (
-  1: 8rem,
+$display-font-sizes: (1: 8rem,
   2: 4.5rem,
 );
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+
+// Scrollbar 
+::-webkit-scollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 5px;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.25);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: $dark;
+}
 
 body {
   overflow-x: hidden;
