--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -19,7 +19,7 @@
 
       <div class="about-me p-2 p-md-0 "
            style="z-index: 10;">
-        <h1 class="fw-normal display-2 mb-2 text-nowrap"
+        <h1 class="fw-normal display-2 mb-2 "
             #aboutMeName>I am <b class="text-primary fw-bold">Temo Kuliashvili</b>,
         </h1>
         <div class="about-text w-100 w-md-50"
@@ -34,29 +34,35 @@
             I give my all to any project and am always looking ahead to the next task at hand.
           </p>
         </div>
-        <!-- <h5 class="display-5">
-          Technical Skills
-        </h5>
-        <ul>
-          <li>Angular</li>
-          <li>TypeScript</li>
-          <li>HTML</li>
-          <li>CSS/SCSS</li>
-          <li>Javascript</li>
-          <li>Bootstrap</li>
-          <li>GSAP</li>
-        </ul>
-        <h5 class="display-5">
-          Design Skills
-        </h5>
-        <ul>
-          <li>Figma</li>
-          <li>Photoshop</li>
-          <li>Adobe XD</li>
-        </ul>
-      </div> -->
-
+        <div class="about-skills d-flex gap-2 mt-2 mt-md-5">
+          <div>
+            <h5 class="display-5 mb-2">
+              Technical Skills
+            </h5>
+            <ul>
+              <li>Angular</li>
+              <li>TypeScript</li>
+              <li>HTML</li>
+              <li>CSS/SCSS</li>
+              <li>Javascript</li>
+              <li>Bootstrap</li>
+              <li>GSAP</li>
+            </ul>
+          </div>
+          <div class="mt-5">
+            <h5 class="display-5 mb-2">
+              Design Skills
+            </h5>
+            <ul>
+              <li>Figma</li>
+              <li>Photoshop</li>
+              <li>Adobe XD</li>
+            </ul>
+          </div>
+        </div>
       </div>
 
     </div>
+
   </div>
+</div>
