--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,6 @@
 <div id="contact">
-  <div class="container-xxl">
-    <h1 class="display-2 fw-bold mb-4">Contact</h1>
+  <div class="container-xxl my-5">
+    <h1 class="display-2 fw-bold mb-3">Contact</h1>
     <div class="d-flex align-items-center gap-2">
       <li>
         <a href="https://github.com/temodev"
